Version 0.5.2 (ongoing):
	implement rich comparison rather than cmp (fixes HilbertSpace() == None)
	check ininstance in HilbertArray.__eq__
	HilbertArray.O method (density operator)
	convert symbolic to complex for eig/svd
	entropy method
	eigvals method (symbolic for Sage)
	entropy can return a symbolic expression
	n() method for sage

Version 0.5.1 (2011-04-03):
	cphase was erroneously called cnot
	added correct cnot gate

Version 0.5 (2011-03-28):
	fixed base_field equality check
	fixed Hadamard gate for Sage's SR
	full/partial trace function
	eigenvectors function
	diagonal matrix factory function
	random_array gives complex values
	0-d arrays always have int size (not 1.0)
	matrix pow operator
	apply_map function

Version 0.4 (2011-03-13):
	don't test for Sage on every base_field_lookup call
	custom matrix norm that works on Sage's SR
	more package metadata

Version 0.3 (2011-03-11):
	Python type arrays can use Sage rendering in Sage
	Sage support without mixins
	renamed some modules (no API changes)
	unary negation
	Pauli states and some circuit operators
	input data is cast for Sage base fields

Version 0.2 (2011-03-10):
	fix: tensordot returns scalar instead of 0-d Hilbert array
	fix: catch usage of array slices (which are not allowed)

Version 0.1 (2011-03-08):
	initial version