@@ -7,6 +7,7 @@ Version 0.5.2 (ongoing):
 	eigvals method (symbolic for Sage)
 	entropy can return a symbolic expression
 	n() method for sage
+	eig gives symbolic for sage
 
 Version 0.5.1 (2011-04-03):
 	cphase was erroneously called cnot
